opam-version: "2.0"
maintainer: "ygrek@autistici.org"
authors: "ygrek"
homepage: "https://ygrek.org/p/ocaml-lzo/"
doc: ["https://ygrek.org/p/ocaml-lzo/api/index.html"]
bug-reports: "https://github.com/ygrek/ocaml-lzo/issues"
dev-repo: "git+https://github.com/ygrek/ocaml-lzo.git"
tags: ["org:ygrek"]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"
  "dune" {>= "2.6"}
  "dune-configurator"
]
depexts: [
  ["lzo2"] {os-family = "bsd"}
  ["liblzo2-dev"] {os-family = "debian"}
  ["lzo"] {os-distribution = "homebrew"}
  ["lzo-dev"] {os-distribution = "alpine"}
  ["lzo-devel"] {os-family = "suse" | os-family = "opensuse"}
  ["lzo-devel"] {os-distribution = "centos" | os-distribution = "fedora"}
]
synopsis: "Bindings to LZO - a portable lossless data compression library"
