(library
 (name lzo)
 (public_name lzo)
 (wrapped false)
 (foreign_stubs
  (language c)
  (names lzo_stubs)
  (flags
   :standard
   (:include c_flags.sexp)))
 (c_library_flags
  (:include c_library_flags.sexp)))

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (action
  (run ./config/discover.exe)))
